--- a/src/components/ColNav/ColNav.css
+++ b/src/components/ColNav/ColNav.css
@@ -20,3 +20,12 @@
     padding: 8px 15px;
     box-sizing: content-box;
 }
+
+@media(min-width : 200px)and (max-width : 550px) {
+    #col-nav-container {
+        height: 100%;
+        position: absolute;
+        top: 8.2%;
+        display: none;
+    }
+}
